--- a/lwj/.project
+++ b/lwj/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>misli</name>
+	<name>lwj</name>
 	<comment></comment>
 	<projects>
 	</projects>
